added mobile meta tag and jquery mobile cdns

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>Sonicnote</title>
+   <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width, height=device-height">
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <link rel='stylesheet' href='http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.css'>
   <%= javascript_include_tag "application" %>
+  <script src='//code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.js'></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
