added audio player test

--- a/app/assets/stylesheets/songs.css.scss
+++ b/app/assets/stylesheets/songs.css.scss
@@ -1,3 +1,20 @@
+
+
+.mainHeader {
+
+}
+
+.mainNav {
+
+
+  .mainNavList {
+    li {
+      list-style: none;
+    }
+  }
+}
+
+
 .test {
   width: 100%;
   height: 100px;
