--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,3 +1,18 @@
-Hello world!
 
-<div class='test'></div>
+
+<!-- <div class='test'></div> -->
+
+<div class='container'>
+  <header class='mainHeader'>
+    <h1>Welcome to MuseNote</h1>
+  </header>
+  <nav class='mainNav'>
+    <ul class='mainNavList'>
+      <li>Log-in</li>
+      <li>Explore</li>
+      <li>Favorites</li>
+    </ul> <!-- end mainNav -->
+  </nav> <!-- end mainNav -->
+</div>
+
+<audio id="demo" src='01Bridges.m4a'>play</audio>
