--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -57,11 +57,11 @@
           </p>
         </div>
         <div class='songImage'>
-          <img src='/images/album.png'>
+          <img id='cover1' src=''>
         </div>
         <footer>
-          <p>Song</p>
-          <p>Band</p>
+          <p id='title1'></p>
+          <p id='band1'></p>
         </footer>
       </div>
       <div class='songs song2'>
@@ -75,11 +75,11 @@
           </p>
         </div>
         <div class='songImage'>
-          <img src='http://www.123callingalldogs.com/savedimages/macexplorer_com-puppy-dog-26.jpg'>
+          <img id='cover2' src=''>
         </div>
         <footer>
-          <p>Song</p>
-          <p>Band</p>
+          <p id='title2'></p>
+          <p id='band2'></p>
         </footer>
       </div>
     </div>
@@ -91,23 +91,90 @@
     <div class='genreWindow'>
 
       <ul class='genreList'>
-        <li class='clearfix'>
-          <p>Genre Name</p>
+   <!--      <li class='clearfix'>
+          <p>Alternative</p>
           <div class='checkbox'>
-            <input type='checkbox' id='genre' />
+            <input type='checkbox' class='category' id='genre' value='alternative'/>
+          </div>
+        </li> -->
+        <li class='clearfix'>
+          <p>Blues</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='blues'/>
+          </div>
+        </li>
+       <!--  <li class='clearfix'>
+          <p>Christian</p>
+          <div class='checkbox'>
+            <input type='checkbox' id='genre'  class='category' id='genre' value='christian'/>
+          </div>
+        </li> -->
+        <li class='clearfix'>
+          <p>Classical</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='classical'/>
           </div>
         </li>
         <li class='clearfix'>
-          <p>Genre Name2</p>
+          <p>Country</p>
           <div class='checkbox'>
-            <input type='checkbox' id='genre' />
+            <input type='checkbox' class='category' id='genre' value='country'/>
           </div>
         </li>
         <li class='clearfix'>
-          <p>Genre Name3</p>
+          <p>Easy Listening</p>
           <div class='checkbox'>
-            <input type='checkbox' id='genre' />
+            <input type='checkbox' class='category' id='genre' value='easy listening'/>
           </div>
+        </li>
+        <li class='clearfix'>
+          <p>Electronic</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='electronic'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>House</p>
+          <div class='checkbox'>
+            <input type='checkbox' id='genre'  class='category' id='genre' value='house'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>Hip-Hop</p>
+          <div class='checkbox'>
+            <input type='checkbox' id='genre'  class='category' id='genre' value='hip hop'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>Jazz</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='jazz'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>Latin</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='latin'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>Pop</p>
+          <div class='checkbox'>
+            <input type='checkbox' id='genre'  class='category' id='genre' value='pop'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>Reggae</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='reggae'/>
+          </div>
+        </li>
+        <li class='clearfix'>
+          <p>Rock</p>
+          <div class='checkbox'>
+            <input type='checkbox' class='category' id='genre' value='rock'/>
+          </div>
+        </li>>
         </li>
       </ul>
     </div>
